# MyCar

./: .gitignore  CMakeLists.txt  build_msvc14.bat  build_x11.sh
etc/: CMakeLists.txt  account.db  server.conf
examples/: CMakeLists.txt
examples/ClientApp/: CMakeLists.txt  ClientApp.cpp  ClientApp.h
examples/client/: CMakeLists.txt  ClientApp.cpp  ClientApp.h
include/: CMakeLists.txt
include/car/: Account.h  AccountClient.h  AccountInterface.h  Car.h  RCFInterface.h  ServerDomain.h
include/core/: Def.h  Event.h  Log.h  Runtime.h
include/server/: Account.h  Car.h  ServerDomain.h  Types.h
src/: CMakeLists.txt
src/carservice/: CMakeLists.txt  CarServiceApp.cpp  CarServiceApp.h
src/client/: .gitignore  Account.cpp  Account.h  AddFiendPage.qml  AddFriendPage.qml  Car.cpp  Car.h  CarPage.qml  CellphonePage.qml  Chat.cpp  Chat.h  ChatItemComponent.qml  ChatPage.qml  Check.qml  CircleIcon.qml  Contacts.cpp  Contacts.h  ContactsPage.qml  CreateGroupPage.qml  Dial.qml  EditGroupPage.qml  Friends.cpp  Friends.h  GroupChat.cpp  GroupChat.h  GroupChatPage.qml  GroupInfoPage.qml  Groups.cpp  Groups.h  HandledPage.qml  ImageButton.qml  ImageProvider.cpp  ImageProvider.h  Item.h  Item.h.t10292  Key.qml  Keyboard.qml  LayerManager.cpp  LayerManager.h  LayerManager.h.Y10292  (+37 more)
src/client/img/NaviPanel/: Thumbs.db
src/core/: CMakeLists.txt  Def.cpp  Log.cpp  Log_Internal.cpp  Log_Internal.h
src/endpoint/: Account.cpp  Account.h  CarPage.qml  HandledPage.qml  ImageButton.qml  ImageProvider.cpp  ImageProvider.h  LoginPage.qml  MessagePage.qml  NaviBar.qml  Singleton.h  ToggleButton.qml  main.cpp  svcar.pro
src/libcar/: AccountClient.cpp  AccountStubImpl.cpp  AccountStubImpl.h  CMakeLists.txt  CarStubImpl.cpp  CarStubImpl.h  DB.cpp  DB.h  RCFInterface.h  ServerDomain.cpp  Share.h
src/libcore/: CMakeLists.txt  Runtime.cpp
src/service/: AccountStub.cpp  AccountStub.h  AccountStubImpl.cpp  CMakeLists.txt  CarStub.cpp  CarStub.h  CarStubImpl.cpp  CarStubImpl.h  DB.cpp  DB.h  ServerDomain.cpp  Service.cpp  Service.h
